v1.3.6
- NEW: Template hooks - Before Hero (suki/frontend/before_hero).
- NEW: Template hooks - After Hero (suki/frontend/after_hero).
- FIX: WooCommerce - Fix theme's breadcrumb on WooCommerce archive page.

v1.3.5
- NEW: WooCommerce - Styles for WooCommerce widget blocks: Price Filter and Attribute Filter.
- FIX: Migration - Fix version migration.
- FIX: Breadcrumb - Error on blog front page.
- FIX: WooCommerce - Fix theme's breadcrumb on WooCommerce product page.
- FIX: WooCommerce - Disabled product gallery still takes space in the layout.
- FIX: Dynamic CSS - Headings typography settings CSS.

v1.3.4
- FIX: WooCommerce - Fix theme's breadcrumb for WooCommerce product and archive pages.

v1.3.3
- FIX: Blog - Pagination now showing.
- FIX: WooCommerce - Fix theme's breadcrumb for WooCommerce product pages.
- FIX: Migration - Fix version migration.

v1.3.2
- TWEAK: Breadcrumb - Improve breadcrumb on WooCommerce product pages, it will automatically detect "Shop" page title and use it in the breadcrumb.
- FIX: Hero - Hero section background mode on single post type pages.
- FIX: WooCommerce - Account page's avatar bug, not showing user's defined gravatar.
- FIX: WooCommerce - Product gallery width option.
- FIX: Gutenberg CSS.

v1.3.1
- NEW: Theme Support - Add Gutenberg "Custom Spacing" theme support (block padding options).
- NEW: Breadcrumb - Add new option: "Hide if home or current page is the only item" mode.
- FIX: Breadcrumb - Bug on singular pages.
- FIX: WooCommerce - Content header issue on Shop page.
- FIX: Page Settings - Default values on custom post types.
- FIX: Gutenberg CSS.
- FIX: Some dynamic CSS bugs.

v1.3.0
- NEW: Content Header — Introducing "Content Header", per-page configurable set of page title, breadcrumb, and other elements.
- NEW: Hero Section — Replace the former "Page Header" section.
- NEW: Blog - Add new dedicated Single Post Page options (formerly uses the same layout as "Default" post layout for archives page).